crates/otter-vm/tests/compile_fail/frame_is_not_send.stderr
error[E0277]: `Rc<[otter_gc::compressed::Gc<UpvalueCellBody>]>` cannot be sent between threads safely
  --> tests/compile_fail/frame_is_not_send.rs:11:17
   |
11 |     assert_send(frame);
   |     ----------- ^^^^^ `Rc<[otter_gc::compressed::Gc<UpvalueCellBody>]>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Frame`, the trait `Send` is not implemented for `Rc<[otter_gc::compressed::Gc<UpvalueCellBody>]>`
note: required because it appears within the type `Frame`
  --> src/frame_state.rs
   |
   | pub struct Frame {
   |            ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/frame_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const ()` cannot be sent between threads safely
  --> tests/compile_fail/frame_is_not_send.rs:11:17
   |
11 |     assert_send(frame);
   |     ----------- ^^^^^ `*const ()` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Frame`, the trait `Send` is not implemented for `*const ()`
note: required because it appears within the type `PhantomData<*const ()>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_vm::Value`
  --> src/value/mod.rs
   |
   | pub struct Value(u64, std::marker::PhantomData<*const ()>);
   |            ^^^^^
note: required because it appears within the type `Frame`
  --> src/frame_state.rs
   |
   | pub struct Frame {
   |            ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/frame_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const GeneratorBody` cannot be sent between threads safely
  --> tests/compile_fail/frame_is_not_send.rs:11:17
   |
11 |     assert_send(frame);
   |     ----------- ^^^^^ `*const GeneratorBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Frame`, the trait `Send` is not implemented for `*const GeneratorBody`
note: required because it appears within the type `PhantomData<*const GeneratorBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<GeneratorBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `JsGenerator`
  --> src/generator.rs
   |
   | pub struct JsGenerator {
   |            ^^^^^^^^^^^
note: required because it appears within the type `Option<JsGenerator>`
  --> $RUST/core/src/option.rs
   |
   | pub enum Option<T> {
   |          ^^^^^^
note: required because it appears within the type `Frame`
  --> src/frame_state.rs
   |
   | pub struct Frame {
   |            ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/frame_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`

error[E0277]: `*const PurePromiseBody` cannot be sent between threads safely
  --> tests/compile_fail/frame_is_not_send.rs:11:17
   |
11 |     assert_send(frame);
   |     ----------- ^^^^^ `*const PurePromiseBody` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `Frame`, the trait `Send` is not implemented for `*const PurePromiseBody`
note: required because it appears within the type `PhantomData<*const PurePromiseBody>`
  --> $RUST/core/src/marker.rs
   |
   | pub struct PhantomData<T: PointeeSized>;
   |            ^^^^^^^^^^^
note: required because it appears within the type `otter_gc::compressed::Gc<PurePromiseBody>`
  --> $WORKSPACE/crates/otter-gc/src/compressed.rs
   |
   | pub struct Gc<T: ?Sized> {
   |            ^^
note: required because it appears within the type `PurePromise`
  --> src/promise.rs
   |
   | pub struct PurePromise {
   |            ^^^^^^^^^^^
note: required because it appears within the type `promise::PromiseRepr`
  --> src/promise.rs
   |
   | enum PromiseRepr {
   |      ^^^^^^^^^^^
note: required because it appears within the type `JsPromiseHandle`
  --> src/promise.rs
   |
   | pub struct JsPromiseHandle {
   |            ^^^^^^^^^^^^^^^
note: required because it appears within the type `AsyncFrameState`
  --> src/frame_state.rs
   |
   | pub struct AsyncFrameState {
   |            ^^^^^^^^^^^^^^^
note: required because it appears within the type `Option<AsyncFrameState>`
  --> $RUST/core/src/option.rs
   |
   | pub enum Option<T> {
   |          ^^^^^^
note: required because it appears within the type `Frame`
  --> src/frame_state.rs
   |
   | pub struct Frame {
   |            ^^^^^
note: required by a bound in `assert_send`
  --> tests/compile_fail/frame_is_not_send.rs:6:19
   |
 6 | fn assert_send<T: Send>(_t: T) {}
   |                   ^^^^ required by this bound in `assert_send`
